log
Fri May  6 15:14:41 UTC 2022: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
9fdfa39
Fri May  6 15:15:10 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
b2d8f68
Fri May  6 15:15:30 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
72c79e3
Fri May  6 15:16:51 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
f8f1f7f
Fri May  6 15:17:12 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
32593c3
Fri May  6 15:23:48 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
12c1d8e
Fri May  6 15:24:22 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
de77042
Fri May  6 15:25:27 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
d34d22e
Fri May  6 15:32:23 UTC 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
6cd04c1
Fri May  6 15:33:01 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
0a53b44
Fri May  6 15:33:53 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1d41109
Fri May  6 15:34:15 UTC 2022: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  2|2
total_score: 20/70
a841cb6
Fri May  6 15:51:25 UTC 2022: 
 heap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e00ed06
Fri May  6 15:53:09 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15e8418
Fri May  6 15:53:30 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01acb8e
Fri May  6 15:54:08 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e54cec
Fri May  6 15:56:19 UTC 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
090f0fe
